# eml-codec

./: .gitignore  Cargo.toml  README.md  notes.md  rfc822.eml  taplo.toml  typos.toml
.forgejo/workflows/: ci.yml
archive/: line_folding.rs  line_folding_single.rs  mailbox_print_parse.rs  mailboxlist_print_parse.rs  messageid_print_parse.rs  unstructured_print_parse.rs
derive_fuzz_eq/: Cargo.toml
derive_fuzz_eq/src/: lib.rs
doc/: DESIGN.md  TESTING.md  goals.md
eml_codec_derives/: Cargo.toml
eml_codec_derives/src/: lib.rs
examples/: README.md  parse.rs  simple.rs  trace.rs
fuzz/: Cargo.toml  README.md  fuzz.sh  parallel_fuzz.sh
fuzz/fuzz_targets/: message_parse.rs  message_print_parse.rs
ignore.test/: enron.rs  known.rs
resources/: README.md
resources/aero100/: .gitignore  restore.sh  test.sh
resources/caml-list/: .gitignore  restore.sh  test.sh
resources/dxflrs/: 0002_mime.eml  0004_msg-in-msg.eml  0005_mail-parser-readme.eml
resources/enron/: .gitignore  restore.sh  test.sh
resources/epstein/: .gitignore  recover.sh  test.sh
resources/hamlet/: .gitignore  README.md  restore.sh  test.sh
resources/rfc/: 013.eml  016.eml  019.eml  020.eml  030.eml  032.eml
src/: abnf.rs  address.rs  arbitrary_utils.rs  common_fields.rs  datetime.rs  display_bytes.rs  email.rs  error.rs  fuzz_eq.rs  header.rs  headers.rs  i18n.rs  identification.rs  lib.rs  mailbox.rs  main.rs  misc_token.rs  model.rs  parse.rs  pointers.rs  print.rs  quoted.rs  raw_input.rs  tokens.rs  trace.rs  type.rs  utils.rs  whitespace.rs  words.rs
src/fragments/: address.rs  datetime.rs  eager.rs  encoding.rs  field_raw.rs  header.rs  identification.rs  lazy.rs  mailbox.rs  mime.rs  misc_token.rs  mod.rs  model.rs  part.rs  quoted.rs  section.rs  trace.rs  whitespace.rs  words.rs
src/imf/: address.rs  datetime.rs  field.rs  identification.rs  mailbox.rs  message.rs  mime.rs  mod.rs  trace.rs
src/message/: field.rs  mod.rs
src/mime/: charset.rs  content_fields.rs  field.rs  mechanism.rs  mime.rs  mod.rs  part.rs  section.rs  type.rs
src/multipass/: extract_fields.rs  field_eager.rs  field_lazy.rs  guess_charset.rs  header_section.rs  mod.rs  parse_field_lazy.rs  parse_field_names.rs  segment.rs
src/old.multipass/: body_structure.rs  extract_fields.rs  field_eager.rs  field_lazy.rs  header_section.rs
src/part/: composite.rs  discrete.rs  field.rs  mod.rs  part.rs
src/rfc5322/: address.rs  datetime.rs  eager.rs  field.rs  identification.rs  lazy.rs  mailbox.rs  message.rs  mime.rs  mod.rs  trace.rs
src/text/: ascii.rs  boundary.rs  buffer.rs  charset.rs  encoding.rs  misc_token.rs  mod.rs  quoted.rs  recovery.rs  utf8.rs  whitespace.rs  words.rs
tests/: enron.rs  known.rs
