[package]
name = "eml-codec"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/eml-codec"
description = "Email enCOder DECoder in Rust. Support Internet Message Format and MIME (RFC 822, 5322, 2045, 2046, 2047, 2048, 2049)."
documentation = "https://docs.rs/eml-codec"
readme = "README.md"
exclude = [
    "doc/",
    "resources/",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
arbitrary = ["dep:arbitrary", "dep:derive_fuzz_eq", "chrono/arbitrary", "chrono/std"]

[lib]
name = "eml_codec"
path = "src/lib.rs"


[[bin]]
name = "eml_parse"
path = "src/parse.rs"

[dependencies]
nom = "7"
chrono = "0.4"
base64 = "0.21"
encoding_rs = "0.8"
bounded-static = { version = "0.8.0", features = ["derive"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
arbitrary = { version = "1.4.2", optional = true, default-features = false, features = ["derive"] }
derive_fuzz_eq = { path = "derive_fuzz_eq", optional = true }

[dev-dependencies]
walkdir = "2"
pretty_assertions = "1.4.1"
