[package]
name = "eml-codec"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/eml-codec"
description = "Email enCOder DECoder in Rust. Support Internet Message Format and MIME (RFC 822, 5322, 2045, 2046, 2047, 2048, 2049, 6532)."
documentation = "https://docs.rs/eml-codec"
readme = "README.md"
exclude = ["archive/", "doc/", "resources/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
arbitrary = ["dep:arbitrary", "chrono/arbitrary", "chrono/std"]
tracing = ["dep:tracing"]
tracing-recover = ["tracing"]
tracing-unsupported = ["tracing"]

[lib]
name = "eml_codec"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "eml_parse"
path = "examples/parse.rs"

[[example]]
name = "trace"
path = "examples/trace.rs"

[dependencies]
arbitrary = { version = "1.4.2", optional = true, default-features = false, features = [
    "derive",
] }
base64 = "0.21"
bounded-static = { version = "0.8.0", features = ["derive"] }
charset = "0.1.5"
chrono = "0.4"
eml_codec_derives = { path = "eml_codec_derives" }
encoding_rs = "0.8"
memchr = "2.8"
nom = "7"
rand = "0.9.2"
rand_chacha = "0.9.0"
tracing = { version = "0.1.44", optional = true }
utf8_iter = "1.0.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2"
zip = "8.4.0"

[lints.clippy]
# The individually activated lints below come from : nursery, restriction or suspicious.
use_self = "warn"
